--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,14 +1,24 @@
-<h1>Login </h1>
+<!DOCTYPE html>
+<html>
+<head>
+<link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+    <div class="login-page">
+        <div class="form">
+            <h2>Login</h2>
+            <form action="login" method="POST" class="login-form">
+                <div>
+                    <input type="email" id="email" name="email" placeholder="email" required>
+                </div>
+                <div>
+                    <input type="password" id="password" name="password" placeholder="password" required>
+                </div>
+                <button type="submit">Login</button>
+            </form>
+            <p class="message">Not registered? <a href="/register">Create an account</a></p>
 
-<form action="login" method="POST">
-    <div>
-        <label for="email">Email</label>
-        <input type="email" id="email" name="email" required>
+        </div>
     </div>
-    <div>
-        <label for="password">Password</label>
-        <input type="password" id="password" name="password" required>
-    </div>
-    <button type="submit">Login</button>
-</form>
-<a href="/register">Register</a>
+</body>
+</html>
