--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,18 +1,27 @@
-<h1>Register </h1>
+<!DOCTYPE html>
+<html>
+<head>
+<link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+    <div class="login-page">
+        <div class="form">
+            <h2>Register account</h2>
+            <form action="/register" method="POST" class="login-form">
+                <div>
+                    <input type="text" id="name" name="name" placeholder="name" required>
+                </div>
+                <div>
+                    <input type="email" id="email" name="email" placeholder="email" required>
+                </div>
+                <div>
+                    <input type="password" id="password" name="password" placeholder="password" required>
+                </div>
+                <button type="submit">Register</button>
+            </form
+        </div>
+        <p class="message">Already registered? <a href="/login">Sign In</a></p>
+    </div>
 
-<form action="/register" method="POST">
-    <div>
-        <label for="name">Name</label>
-        <input type="text" id="name" name="name" required>
-    </div>
-    <div>
-        <label for="email">Email</label>
-        <input type="email" id="email" name="email" required>
-    </div>
-    <div>
-        <label for="password">Password</label>
-        <input type="password" id="password" name="password" required>
-    </div>
-    <button type="submit">Register</button>
-</form>
-<a href="/login">login</a>
+</body>
+</html>
