--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,3 +1,15 @@
-<h1>Hi index</h1>
-<a href="/register">Register</a>
-<a href="/login">Login</a>
+<!DOCTYPE html>
+<html>
+<head>
+<link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+    <div class="login-page">
+        <div class="form">
+            <h1>Hi Index</h1>
+            <a href="/register">Register</a>
+            <a href="/login">Login</a>
+        </div>
+    </div>
+</body>
+</html>
