--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,4 +1,15 @@
-
-<h1><%= msg %></h1>
-<a href="/register">Register</a>
-<a href="/login">Login</a>
+<!DOCTYPE html>
+<html>
+<head>
+<link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+    <div class="login-page">
+        <div class="form">
+            <h1><%= msg %></h1>
+            <a href="/register">Register</a>
+            <a href="/login">Login</a>
+        </div>
+    </div>
+</body>
+</html>
