--- a/views/token.ejs
+++ b/views/token.ejs
@@ -1,4 +1,19 @@
 
-<h1>Token logged in! :)</h1>
-<a href="/register">Register</a>
-<a href="/login">Login</a>
+<!DOCTYPE html>
+<html>
+<head>
+<link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+    <div class="login-page">
+        <div class="form">
+            <h1>Token logged in! :)</h1>
+            <button>Talk</button>
+            <h3></h3>
+            <a href="/register">Register</a>
+            <a href="/login">Login</a>
+        </div>
+    </div>
+    <script src="index.js"></script>
+</body>
+</html>
